<resources>
    <string name="app_name">Human Signals</string>
    <string name="textview">TextView</string>
    <string name="probability">probability</string>
    <string name="downstairs">downstairs</string>
    <string name="jogging">jogging</string>
    <string name="sitting">sitting</string>
    <string name="upstairs">upstairs</string>
    <string name="walking">walking</string>
    <string name="activity" translatable="false">activity</string>
    <string name="register_attitude">ATTITUDE</string>
    <string name="registered_gravity">GRAVITY</string>
    <string name="registered_acceleration">ACCELERATION</string>
    <string name="register_rotation_rate">ROTATION RATE</string>
    <string name="real_time_activity_button">REAL TIME ACTIVITY</string>
    <string name="register_activity_button">REGISTER ACTIVITY</string>
    <string name="button_start">START</string>
    <string name="button_stop">STOP</string>
</resources>
